--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 .loader {
     width: calc(80px / cos(45deg));
     height: 14px;
-    background: repeating-linear-gradient(-45deg, #5ca194 0 15px, #5ca194 0 20px) left/200% 100%;
+    background: repeating-linear-gradient(-45deg, #5ca194 0 15px, transparent 15px 20px) left/200% 100%;
     animation: l3 2s infinite linear;
     position: fixed;
     left: 50%;
