--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-/* General Styles */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    overflow: hidden; /* Prevent scrollbars during loading */
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +9,6 @@ body {
     background-color: #f0f0f0; /* Background color */
 }
 
-/* Loader Styles */
 .loader {
     width: 85px;
     height: 25px;
@@ -35,9 +33,8 @@ body {
     100% { background-size: 25px 100%, 25px 100%, 25px 100%; }
 }
 
-/* Content Styles */
 .content {
-    display: none; /* Hide content initially */
+    display: none;
     text-align: center;
     position: absolute;
     top: 50%;
